voicevox_core.h

typedef int32_t VoicevoxResultCode;
/**
 * ONNX Runtime。
 *
 * シングルトンであり、インスタンスは高々一つ。
 *
 * ```c
 * const VoicevoxOnnxruntime *ort1;
 * voicevox_onnxruntime_load_once(
 *     voicevox_make_default_load_onnxruntime_options(), &ort1);
 * const VoicevoxOnnxruntime *ort2 = voicevox_onnxruntime_get();
 * assert(ort1 == ort2);
 * ```
 *
 * \orig-impl{VoicevoxOnnxruntime}
 */
typedef struct VoicevoxOnnxruntime VoicevoxOnnxruntime;
/**
 * 音声シンセサイザ。
 *
 * <b>構築</b>(_construction_)は ::voicevox_synthesizer_new で行い、<b>破棄</b>(_destruction_)は ::voicevox_synthesizer_delete で行う。
 *
 * \orig-impl{VoicevoxSynthesizer}
 */
typedef struct VoicevoxSynthesizer VoicevoxSynthesizer;
/**
 * 音声モデルファイル。
 *
 * VVMファイルと対応する。
 * <b>構築</b>(_construction_)は ::voicevox_voice_model_file_open で行い、<b>破棄</b>(_destruction_)は ::voicevox_voice_model_file_delete で行う。
 *
 * \orig-impl{VoicevoxVoiceModelFile}
 */
typedef struct VoicevoxVoiceModelFile VoicevoxVoiceModelFile;
/**
 * スタイルID。
 *
 * VOICEVOXにおける、ある<i>キャラクター</i>のある<i>スタイル</i>を指す。
 *
 * \orig-impl{VoicevoxStyleId}
 */
typedef uint32_t VoicevoxStyleId;
  VoicevoxResultCode
  voicevox_synthesizer_load_voice_model(const struct VoicevoxSynthesizer *synthesizer,
                                        const struct VoicevoxVoiceModelFile *model);
  VoicevoxResultCode
  voicevox_synthesizer_unload_voice_model(const struct VoicevoxSynthesizer *synthesizer,
                                          VoicevoxVoiceModelId model_id);
  const struct VoicevoxOnnxruntime *
  voicevox_synthesizer_get_onnxruntime(const struct VoicevoxSynthesizer *synthesizer);
  bool
  voicevox_synthesizer_is_gpu_mode(const struct VoicevoxSynthesizer *synthesizer);
  bool
  voicevox_synthesizer_is_loaded_voice_model(const struct VoicevoxSynthesizer *synthesizer,
                                             VoicevoxVoiceModelId model_id);
  char *
  voicevox_synthesizer_create_metas_json(const struct VoicevoxSynthesizer *synthesizer);
  VoicevoxResultCode
  voicevox_onnxruntime_create_supported_devices_json(const struct VoicevoxOnnxruntime *onnxruntime,
                                                     char **output_supported_devices_json);
  VoicevoxResultCode
  voicevox_synthesizer_create_audio_query_from_kana(const struct VoicevoxSynthesizer *synthesizer,
                                                    const char *kana,
                                                    VoicevoxStyleId style_id,
                                                    char **output_audio_query_json);
  VoicevoxResultCode
  voicevox_synthesizer_create_audio_query(const struct VoicevoxSynthesizer *synthesizer,
                                          const char *text,
                                          VoicevoxStyleId style_id,
                                          char **output_audio_query_json);
  VoicevoxResultCode
  voicevox_synthesizer_create_accent_phrases_from_kana(const struct VoicevoxSynthesizer *synthesizer,
                                                       const char *kana,
                                                       VoicevoxStyleId style_id,
                                                       char **output_accent_phrases_json);
  VoicevoxResultCode
  voicevox_synthesizer_create_accent_phrases(const struct VoicevoxSynthesizer *synthesizer,
                                             const char *text,
                                             VoicevoxStyleId style_id,
                                             char **output_accent_phrases_json);
  VoicevoxResultCode
  voicevox_synthesizer_replace_mora_data(const struct VoicevoxSynthesizer *synthesizer,
                                         const char *accent_phrases_json,
                                         VoicevoxStyleId style_id,
                                         char **output_accent_phrases_json);
  VoicevoxResultCode
  voicevox_synthesizer_replace_phoneme_length(const struct VoicevoxSynthesizer *synthesizer,
                                              const char *accent_phrases_json,
                                              VoicevoxStyleId style_id,
                                              char **output_accent_phrases_json);
  VoicevoxResultCode
  voicevox_synthesizer_replace_mora_pitch(const struct VoicevoxSynthesizer *synthesizer,
                                          const char *accent_phrases_json,
                                          VoicevoxStyleId style_id,
                                          char **output_accent_phrases_json);